@@ -1,0 +1,67 @@
+Name: @PACKAGE@
+#Icon:
+Summary: A thesaurus interface library
+Version: @VERSION@
+Release: 1
+Source: @PACKAGE@-@VERSION@.tar.gz
+Group: System Environment/Libraries
+License: GPL
+Prefix: /usr
+
+%description
+AikSaurus provides a simple interface to an included English thesaurus.
+
+%prep
+%setup
+%build
+./configure --prefix=%{prefix}
+make
+
+%install
+make install
+
+%post
+/sbin/ldconfig
+
+%postun
+/sbin/ldconfig
+
+%files
+/usr/lib/lib@PACKAGE@.so.0.@VERSION@
+/usr/lib/lib@PACKAGE@.a
+/usr/share/AikSaurus/0.bz2
+/usr/share/AikSaurus/1.bz2
+/usr/share/AikSaurus/10.bz2
+/usr/share/AikSaurus/11.bz2
+/usr/share/AikSaurus/12.bz2
+/usr/share/AikSaurus/13.bz2
+/usr/share/AikSaurus/14.bz2
+/usr/share/AikSaurus/15.bz2
+/usr/share/AikSaurus/16.bz2
+/usr/share/AikSaurus/17.bz2
+/usr/share/AikSaurus/18.bz2
+/usr/share/AikSaurus/19.bz2
+/usr/share/AikSaurus/2.bz2
+/usr/share/AikSaurus/20.bz2
+/usr/share/AikSaurus/21.bz2
+/usr/share/AikSaurus/22.bz2
+/usr/share/AikSaurus/23.bz2
+/usr/share/AikSaurus/24.bz2
+/usr/share/AikSaurus/25.bz2
+/usr/share/AikSaurus/26.bz2
+/usr/share/AikSaurus/27.bz2
+/usr/share/AikSaurus/28.bz2
+/usr/share/AikSaurus/29.bz2
+/usr/share/AikSaurus/3.bz2
+/usr/share/AikSaurus/30.bz2
+/usr/share/AikSaurus/31.bz2
+/usr/share/AikSaurus/32.bz2
+/usr/share/AikSaurus/33.bz2
+/usr/share/AikSaurus/4.bz2
+/usr/share/AikSaurus/5.bz2
+/usr/share/AikSaurus/6.bz2
+/usr/share/AikSaurus/7.bz2
+/usr/share/AikSaurus/8.bz2
+/usr/share/AikSaurus/9.bz2
+/usr/share/AikSaurus/index.txt
+%doc CHANGES ChangeLog README LICENSE
